【优化】改为jar包提供给外部